--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -7,7 +7,7 @@
             import {dTag, cardData} from "./query.js"
             document.querySelector('include[src="/univasset/scripts/faqs/index.html"]')
                 .addEventListener("replace", () => {
-                    getQueryJS.bind(null, dTag, cardData)
+                    getQueryJS(dTag, cardData)
                     alert("include listener ran")
             });
         </script>
