--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -4,12 +4,9 @@
         <!-- <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
         <script type="module">
             import {getQueryJS} from "/univasset/scripts/faqs/index.js";
-            import {dTag, cardData} from "./query.js"
+            import {dTag, cardData} from "./query.js";
             document.querySelector('include[src="/univasset/scripts/faqs/index.html"]')
-                .addEventListener("replace", () => {
-                    getQueryJS(dTag, cardData)
-                    alert("include listener ran")
-            });
+                .addEventListener("replace", getQueryJS.bind(null, dTag, cardData));
         </script>
         <script type="module" src="/univasset/scripts/include.js"></script>
 
