--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
+        <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script type="module" src="./query.js"></script>
         <script type="module" src="/univasset/scripts/include.js"></script>
 
@@ -30,7 +30,7 @@
 
         <div class="container">
             <section id="main_content">
-                <include src="/univasset/scripts/faqs/index.html" onreplace="import('./query.js')"></include>
+                <include src="/univasset/scripts/faqs/index.html"></include>
             </section>
         </div>
     </body>
