--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -30,6 +30,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>December 28, 2023</summary>
+                    Added IDs 00501, 00502.<br>
+                    Updated ID 00028., 00450
+                </details>
+                <details>
                     <summary>December 20, 2023</summary>
                     Added IDs 00497, 00498, 00499, 00500.
                 </details>
