--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -31,7 +31,7 @@
             <section id="main_content">
                 <details>
                     <summary></summary>
-                    Added ID 19.<br>
+                    Added IDs 19, 20.<br>
                     DailyWeeklyMissions tag added.
                 </details>
                 <details>
