--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -12,17 +12,16 @@
                 ["Lizzy Amaranth's Matrix Guide (LAM Guide)", "https://docs.google.com/spreadsheets/d/1wlKPot-Gi1MM6OGAO7ivzSiA8Tdq081OqCqeL2E6DU8"],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
                 ['PNC Algo Mainstat Viability List', 'https://docs.google.com/spreadsheets/d/1DSK4d94RdRCV_ji7NXC0Klyf7v_dUkIY9n9qW9y2UeQ'],
+                ["PNC Search Terminal Lv5 Results", "https://docs.google.com/spreadsheets/d/1rF4aIT7GPS70euG4Zbbeib3pSidiKZVhFgpHWjDVC6I"],
                 ['PNC Neural Cloud Projections', 'https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU'],
                 ["MMG Entry 1: Team Building", "https://docs.google.com/spreadsheets/d/1KxJgCmfdLt3MbE1IC4T38hOCfauxSGQ6B2to8doXig8"],
                 ['Neural Cloud Numbers Sheet', 'https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc'],
                 ["u/Zugon's PNC Item Rates", "https://docs.google.com/spreadsheets/d/1guDb_49x6g7I84Na2SP5BAB5SMFXubR41r0dhXHyGZQ"],
                 ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
                 ["Less Intensive LUG", "https://docs.google.com/spreadsheets/d/1iqwy_37pHdbbxrM6rcCqcgTz174sRO4OZ_VvHPwgiwM"],
-                ["PNC Story Script", "https://drive.google.com/drive/folders/1gQTXlU2ITpYXzXO0SsCwCzNvCeFa7L01"], //https://old.reddit.com/r/GFLNeuralCloud/comments/17u8963/weekly_professors_lounge_november_13_2023/k9m058h/
                 ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
                 ["PNC Calculator", "https://docs.google.com/spreadsheets/d/1_b9E22dIP526Axn4rUSBfLBKvQj7K1jB7iMfSiQBOdI"],
                 ["Just Abigail", "https://docs.google.com/spreadsheets/d/1Qekx9EWUwDWijVBbZBMcZBLPPE49jUmng3nX_oQ0ZEw"],
-                ["L.U.S.T. 2", "https://docs.google.com/spreadsheets/d/1FMK713okcJNQuCv625Ut0TZuQbm9RlHk7l1yOUF9Qdw"],
                 ['Algorithms', 'https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU'],
             )
             document.querySelector("#main_content div").replaceWith(DIV)
@@ -54,6 +53,8 @@
         <div class="container">
             <section id="main_content">
                 <div></div>
+                <br>
+                <a href="https://drive.google.com/drive/folders/1gQTXlU2ITpYXzXO0SsCwCzNvCeFa7L01">u/MoonlightArchivist's PNC Story Script</a>
             </section>
         </div>
     </body>
