--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -30,7 +30,7 @@
 
         <div class="container">
             <section id="main_content">
-                <include src="/univasset/scripts/faqs/index.html" onreplace="console.log(`getQueryJS: ${window.getQueryJS}`); console.log(`dTag: ${window.dTag}`); console.log(`cardData: ${window.cardData}`);"></include>
+                <include src="/univasset/scripts/faqs/index.html"></include>
             </section>
         </div>
     </body>
