--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -30,7 +30,7 @@
 
         <div class="container">
             <section id="main_content">
-                <include src="/univasset/scripts/faqs/index.html"></include>
+                <include src="/univasset/scripts/faqs/index.html" onreplace="console.log('queryFunc:', queryFunc); console.log('cards:', cards); console.log('tags:', tags);"></include>
             </section>
         </div>
     </body>
