--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -30,7 +30,7 @@
         <div class="container">
             <section id="main_content">
                 <details>
-                    <summary></summary>
+                    <summary>December 28, 2023</summary>
                     Added IDs 19, 20.<br>
                     DailyWeeklyMissions tag added.
                 </details>
