--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include.js"></script>
+        <script type="module" src="/univasset/scripts/include/index.js"></script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +28,7 @@
 
         <div class="container">
             <section id="main_content">
-                <!-- <p>Created and maintained by u/BOOM_all_pass. For comments, suggestions, or violent reactions, ping this user in the respectives guide's subreddit.</p> -->
+                <p>Created and maintained by u/BOOM_all_pass. For comments, suggestions, or violent reactions, ping this user in the respective game's subreddit.</p>
             </section>
         </div>
     </body>
