--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="module" src="/univasset/scripts/include.js"></script>
+        <script type="module" src="/univasset/scripts/include/index.js"></script>
         <script type="module" src="./index.js"></script>
         <!-- Typescript files unusable in github. -->
 
@@ -107,12 +107,8 @@
     {
         "name" : "Eos",
         "reference" : {"" : ""},
-        "fragments" : ["Fragment Search"],
+        "fragments" : [""],
         "event" : ""
-    },
-    {
-        "name" : "Taisch",
-        "reference" : {"" : ""}
     },
     {
         "name" : "Luna",
