--- a/univasset/scripts/faqs/index.html
+++ b/univasset/scripts/faqs/index.html
@@ -27,4 +27,4 @@
     <button type="button" value="last">Last</button>
 </div>
 
-<div id="cards-field">Empty field</div>
+<div id="cards-field"></div>
