--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -39,14 +39,13 @@
 
                     <dt>Daiyan</dt>
                     <dd>Concordia only affects the damaging parts of Active Skills, non-<a href="#NormalAttackSkills">Normal Attack Skill</a> Passive Skills, and Ultimates.</dd>
-                    <!-- Concordia does not work on derivative attacks. -->
                     <!-- <dd>Concordia does not work on Normal Attacks, and Derivative attacks.</dd> -->
 
                     <dt>Vee</dt>
-                    <dd>Normal Attack is turned into an "infinite range" melee attack.</dd>
+                    <dd>Normal Attack is turned into an "infinite range" melee attack.</dd> <!-- or normal attack does no damage, then normal attack skill activates (carnival mask) -->
 
                     <dt>De Lacey</dt>
-                    <dd>Arma II can self heal in 2-man compositions.</dd>
+                    <dd>Arma II can self heal in 2-man compositions.</dd>   <!-- or is it -->
 
                     <dt>Yanny</dt>
                     <dd>25% P.Def boost only takes into account in-battle base Hashrate.</dd>
@@ -64,6 +63,8 @@
                 </dl>
 
                 <!-- return to last clicked "anchor to hash" -->
+
+                <!-- 2%/5s doesn't count as "heal", therefore doesn't proc on heal-related skills and doesn't show in the summary -->
             </section>
         </div>
     </body>
