--- a/PNC/unitdata/index.html
+++ b/PNC/unitdata/index.html
@@ -29,7 +29,7 @@
 
         <div class="container">
             <section id="main_content">
-                <!-- not button -->
+                <label><input type="checkbox">NOT</label>
                 <input type="text" placeholder="Filter..." />
                 <div id="table"></div>
             </section>
