--- a/GFL/index.html
+++ b/GFL/index.html
@@ -21,7 +21,7 @@
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
 
-        <title>GFL Main Page | Random Scraps</title>
+        <title>Girls' Frontline | Random Scraps</title>
     </head>
 
     <body>
