--- a/PNC/changelog.html
+++ b/PNC/changelog.html
@@ -29,6 +29,12 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>January 17, 2024</summary>
+                    Added IDs 21, 22.<br>
+                    Leveling tag added.<br>
+                    Returner FAQs page added.
+                </details>
+                <details>
                     <summary>December 28, 2023</summary>
                     Added IDs 19, 20.<br>
                     DailyWeeklyMissions tag added.
