--- a/PNC/index.html
+++ b/PNC/index.html
@@ -21,17 +21,18 @@
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
 
-        <title>PNC | Random Scraps</title>
+        <title>Neural Cloud | Random Scraps</title>
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Anything related to GFL: Neural Cloud"></include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Anything related to GFL: Project Neural Cloud"></include>
 
         <div class="container">
             <section id="main_content">
                 <div id="links">
                     <a href="./faqs">Frequently Asked Questions</a>
                     <a href="./starter">Starter Guide</a>
+                    <a href="./returner">Returner Guide</a>
                     <a href="./unitstats">Unit Stats</a>
                     <a href="./unitdata">Unit Data</a>
                     <a href="./unitskills">Unit Skills</a>
