--- a/PNC/starter.html
+++ b/PNC/starter.html
@@ -20,7 +20,7 @@
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
 
-        <title>Guides Compilation | Random Scraps</title>
+        <title>Starter FAQs | Random Scraps</title>
     </head>
 
     <body>
