--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -40,6 +40,7 @@
                     <dt>Daiyan</dt>
                     <dd>Concordia only affects the damaging parts of Active Skills, non-<a href="#NormalAttackSkills">Normal Attack Skill</a> Passive Skills, and Ultimates.</dd>
                     <!-- <dd>Concordia does not work on Normal Attacks, and Derivative attacks.</dd> -->
+                    <!-- all of daiyans attacks are aoe non target aoe attacks -->
 
                     <dt>Vee</dt>
                     <dd>Normal Attack is turned into an "infinite range" melee attack.</dd> <!-- or normal attack does no damage, then normal attack skill activates (carnival mask) -->
@@ -50,6 +51,8 @@
                     <dt>Yanny</dt>
                     <dd>25% P.Def boost only takes into account in-battle base Hashrate.</dd>
 
+                    <!-- clukay auto is a non target attack -->
+                    <!-- kuro danmaku counts as a normal attack skill -->
                     <!-- souchun arma 3 can bypass superarmor or just boss immunity? or only effective on bosses with resist value-->
                     <!-- antonina arma 3 can hit a single target twice, though only one counts as normal attack -->
                 </dl>
@@ -60,7 +63,13 @@
                     <dd>Activates only when unit deals Normal Attacks.</dd>
                     <dd>Is a direct effect of Normal Attacks.</dd>
                     <!-- cannot activate other normal attack skills -->
+                    <!-- does not trigger backlash -->
                 </dl>
+
+                <!-- non target attack -->
+                <!-- usually aoe -->
+                <!-- targets a position instead of a unit -->
+                <!-- does not trigger backlash -->
 
                 <!-- return to last clicked "anchor to hash" -->
 
