--- a/GFL/faqs/index.html
+++ b/GFL/faqs/index.html
@@ -13,7 +13,12 @@
         <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module" src="./index.js"></script>
-        
+
+        <!-- <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <script type="module" src="./query.js"></script>
+        <script type="module" src="/univasset/scripts/faqs/index.js"></script>
+        <script type="module" src="/univasset/scripts/include.js"></script> -->
+
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +45,7 @@
 
         <div class="container">
             <section id="main_content">
-                <!-- <include src="/univasset/scripts/faqs/index.html" onreplace=""></include> -->
+                <!-- <include src="/univasset/scripts/faqs/index.html" onreplace="queryFunc(tags, cards)"></include> -->
                 <div id="input-type-container"></div>
 
                 <!-- #region Input Fields -->
