--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -3,17 +3,17 @@
     <head>
         <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module">
-            import {gdocDropdown} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
+            import {Embed} from "/univasset/scripts/html/index.js";
 
-            gdocDropdown(document.querySelector("#skins"),
+            document.querySelector("#skins").replaceWith(Embed.google(
                 ["GFL Skin/Furniture List", "https://docs.google.com/spreadsheets/d/10ceReDBnWKelZhSN0ztsK6EA2_14Ll8ktcXBHMMs9gQ"],
-                ["GFL Neural Upgrade", "https://docs.google.com/spreadsheets/d/1u2sXat4FD7jFLdjMLrq5zIiDrGJMEVaGvB2z2JysxLI"],
-            )
+                ["GFL Neural Upgrade", "https://docs.google.com/spreadsheets/d/1u2sXat4FD7jFLdjMLrq5zIiDrGJMEVaGvB2z2JysxLI"]
+            ))
             // G_EXCEL, '1fEnzlpQk5Jvja5PwzlpDn2ypqP3BHcGftqWWOLnK17E'
 
-            gdocDropdown(document.querySelector("#speqs"),
-                ["Log-In SPEQs", "https://docs.google.com/spreadsheets/d/1tRS7c6zTcXiJHamnqHw-eWgZd2Ov0BCj"],
-            )
+            document.querySelector("#speqs").replaceWith(Embed.google(
+                ["Log-In SPEQs", "https://docs.google.com/spreadsheets/d/1tRS7c6zTcXiJHamnqHw-eWgZd2Ov0BCj"]
+            ))
         </script>
 
         <meta charset='utf-8'>
@@ -41,7 +41,7 @@
 
         <div class="container">
             <section id="main_content">
-                <a href="https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2">GFL-RC verse collection</a>
+                <a href="https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2">GFL-RC verse collection</a><!-- Ferrari doc? -->
                 <br><br>
                 <details>
                     <summary>Skins/Furnitures/MODs. Created by u/ConductorBichir. Maintained by u/UnironicWeeaboo.</summary>
