--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>January 19, 2024</summary>
+                    Removed ID 00265.<br>
+                    Unit skills page added.
+                </details>
+                <details>
                     <summary>December 28, 2023</summary>
                     Added IDs 00501, 00502.<br>
                     Updated ID 00028., 00450
@@ -247,3 +252,5 @@
         </div>
     </body>
 </html>
+
+<!-- 00265 -->
