--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -19,7 +19,8 @@
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
+        <link rel="stylesheet" href="/main.css">
+        <link rel="stylesheet" href="/univasset/scripts/html/index.css">
         
         <!-- Setup theme-color -->
 
