--- a/GFL/index.html
+++ b/GFL/index.html
@@ -33,6 +33,7 @@
                     <a href="./faqs">Frequently Asked Questions</a>
                     <a href="./starter">New Player Guide</a>
                     <a href="./returner">Returning Player Guide</a>
+                    <a href="./skills">Doll Skill Quirks</a>
                     <a href="./docs" class="tooltip">Compilations<span class="tooltiptext">CGs, Sprites, Skins, MODs, Furnitures, SPEQs</span></a>
                     <a href="./mainpage">Topics Repository</a>
                     <!--a href="./calc">Calculators</a-->
@@ -40,7 +41,6 @@
                     <!-- glossary -->
                     <!-- acquisition index -->
                     <!-- item acquisition -->
-                    <!-- skill quirks -->
                 </div>
 
                 <div id="event"></div>
