--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>January 24, 2024</summary>
+                    Added ID 00265.<br>
+                    Updated IDs 00450, 00120.
+                </details>
+                <details>
                     <summary>January 19, 2024</summary>
                     Removed ID 00265.<br>
                     Unit skills page added.
@@ -252,5 +257,3 @@
         </div>
     </body>
 </html>
-
-<!-- 00265 -->
