--- a/GFL/skills.html
+++ b/GFL/skills.html
@@ -95,6 +95,9 @@
 
                     <dt>PPK Mod</dt>
                     <dd><a href="https://old.reddit.com/r/girlsfrontline/comments/v1l5po/weekly_commanders_lounge_may_31_2022/ib1eu2w/">Reddit breakdown.</a></dd>
+
+                    <dt>Colt Walker</dt>
+                    <dd>ROF debuff is instantly applied after being cleansed.</dd>
                 </dl>
             </section>
         </div>
