--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -32,6 +32,8 @@
         <div class="container">
             <section id="main_content">
                 <div id="table"></div>
+
+                <!-- filter -->
                 <div id="classes">
                     <div>Class</div>
                     <label><input type="checkbox" value="Guard" checked /></label>
@@ -40,6 +42,8 @@
                     <label><input type="checkbox" value="Specialist" checked /></label>
                     <label><input type="checkbox" value="Medic" checked /></label>
                 </div>
+                <!-- has arma - yes, no, unselected -->
+
                 <div id="bonus">
                     <div>Pre-Battle Bonus</div>
                     <span><label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough</label>   <span class="tooltiptext">Units at Lv.70 and 5★.</span></span>
@@ -47,9 +51,9 @@
                     <span><label class="tooltip"><input type="checkbox" value="Oath" />Hearts As One</label>            <span class="tooltiptext">Available after Oath.</span></span>
                     
                     <span><label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta</label>           <span class="tooltiptext">Arma stats at Lv.30.</span></span>
-                    <span><label class="tooltip"><input type="checkbox" value="Algo" />Algorithm</label>                <span class="tooltiptext">Algorithms and substats at Gold rarity, and Efficiency at 2x.</span></span>
+                    <span><label class="tooltip"><input type="checkbox" value="Algo" />Algorithm</label>                <span class="tooltiptext">Algorithms and substats at Gold rarity. Efficiency at 2x.</span></span>
 
-                    <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at max level<!-- Lv.??? -->.</span></span>
+                    <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at Lv.543.</span></span>
 
                     <!-- Fairies -->
                 </div>
