--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -46,10 +46,14 @@
                     <dd>Normal Attack is turned into an "infinite range" melee attack.</dd> <!-- or normal attack does no damage, then normal attack skill activates (carnival mask) -->
 
                     <dt>De Lacey</dt>
-                    <dd>Arma II can self heal in 2-man compositions.</dd>   <!-- or is it -->
+                    <dd>Arma II can self heal when in one tether.</dd>   <!-- or is it -->
 
                     <dt>Yanny</dt>
                     <dd>25% P.Def boost only takes into account in-battle base Hashrate.</dd>
+
+                    <dt>Abigail</dt>
+                    <dd>Arma I "backlash" only activates on direct HP hit. Uses Abigail's stats.</dd>
+                    <!-- arma1 crit damage may or may not count as crit for jiangyu pruposes -->
 
                     <!-- clukay auto is a non target attack -->
                     <!-- kuro danmaku counts as a normal attack skill -->
