--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -42,7 +42,7 @@
 
         <div class="container">
             <section id="main_content">
-                <a href="https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2">GFL-RC verse collection</a><!-- Ferrari doc? -->
+                <a href="https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2">u/YZsFerrari's GFL-RC verse collection.</a>
                 <br><br>
                 <details>
                     <summary>Skins/Furnitures/MODs. Created by u/ConductorBichir. Maintained by u/UnironicWeeaboo.</summary>
