--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -92,5 +92,15 @@
             <form method="dialog"></form>
         </dialog>
 
+        <template id="algo-select-button">
+            <button type="button">
+                <span data-grid="name"></span>
+                <span data-grid="set2"></span>
+                <span data-grid="count"></span>
+                <img />
+                <div></div>
+            </button>
+        </template>
+
     </body>
 </html>
