--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -93,12 +93,12 @@
         </dialog>
 
         <template id="algo-select-button">
-            <button type="button">
-                <span data-grid="name"></span>
-                <span data-grid="set2"></span>
-                <span data-grid="count"></span>
+            <button type="submit">
+                <div data-grid="name"></div>
+                <div data-grid="set2"></div>
+                <div data-grid="count"></div>
                 <img />
-                <div></div>
+                <div data-grid="set3"></div>
             </button>
         </template>
 
