--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -27,12 +27,14 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Testing stages, nothing here yet"></include>
+        <include src="/univasset/scripts/faqs/test.html" subheader="Include nesting tests in progress" onreplace="queryFunc(tags, cards)" ></include>
+
+        <!-- <include src="/univasset/scripts/pageheader/header.html" 0="Testing stages, nothing here yet"></include>
 
         <div class="container">
             <section id="main_content">
                 <include src="/univasset/scripts/faqs/index.html" onreplace="queryFunc(tags, cards)"></include>
             </section>
-        </div>
+        </div> -->
     </body>
 </html>
