--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -1,11 +1,15 @@
 <!--
     0: Subtitle/Page description
+    description: Subtitle/Page description, used by faq test page
 -->
 
 <header>
     <div class="container">
         <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-        <h2><include key="0"></include></h2>
+        <h2>
+            <include key="0"></include>
+            <!-- <include key="description"></include> -->
+        </h2>
 
         <section id="downloads">    <!-- wide window mode -->
             <a href="/GFL" class="btn-gfl"><span></span>Girls' Frontline</a>
