--- a/univasset/scripts/faqs/test.html
+++ b/univasset/scripts/faqs/test.html
@@ -2,7 +2,7 @@
     subheader: page subheader/description
  -->
 
-<include src="/univasset/scripts/pageheader/header.html" param-0="subheader"></include>
+<include src="/univasset/scripts/pageheader/header.html" param-description="subheader"></include>
 
 <div class="container">
     <section id="main_content">
