--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -8,7 +8,7 @@
         <a id="a-title" href="/"><h1>Random Scraps</h1></a>
         <h2>
             <include key="0"></include>
-            <!-- <include key="description"></include> -->
+            <include key="description"></include>
         </h2>
 
         <section id="downloads">    <!-- wide window mode -->
