--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -1,6 +1,6 @@
 <!--
     0: Subtitle/Page description
-    description: Subtitle/Page description, used by faq test page
+    description: Subtitle/Page description, used by faq page
 -->
 
 <header>
