--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -29,6 +29,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>February 01, 2024</summary>
+                    Added IDs 503, 504, 505.<br>
+                    Updated IDs 16, 166, 23.
+                </details>
+                <details>
                     <summary>January 24, 2024</summary>
                     Added ID 00265.<br>
                     Updated IDs 00450, 00120.
