--- a/GFL/faqs/index.html
+++ b/GFL/faqs/index.html
@@ -37,12 +37,6 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Girls' Frontline Reddit Lounge FAQs"></include>
-
-        <div class="container">
-            <section id="main_content">
-                <include src="/univasset/scripts/faqs/index.html" onreplace="queryFunc(tags, cards)"></include>
-            </section>
-        </div>
+        <include src="/univasset/scripts/faqs/index.html" subheader="Girls' Frontline Reddit Lounge FAQs" onreplace="queryFunc(tags, cards)" ></include>
     </body>
 </html>
