--- a/PNC/faqs/index.html
+++ b/PNC/faqs/index.html
@@ -27,12 +27,6 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Project Neural Cloud FAQs"></include>
-
-        <div class="container">
-            <section id="main_content">
-                <include src="/univasset/scripts/faqs/index.html" onreplace="queryFunc(tags, cards)"></include>
-            </section>
-        </div>
+        <include src="/univasset/scripts/faqs/index.html" subheader="Project Neural Cloud FAQs" onreplace="queryFunc(tags, cards)" ></include>
     </body>
 </html>
