--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -6,10 +6,7 @@
 <header>
     <div class="container">
         <a id="a-title" href="/"><h1>Random Scraps</h1></a>
-        <h2>
-            <include key="0"></include>
-            <include key="description"></include>
-        </h2>
+        <h2><include key="0 description"></include></h2>
 
         <section id="downloads">    <!-- wide window mode -->
             <a href="/GFL" class="btn-gfl"><span></span>Girls' Frontline</a>
