--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
         
         <!-- Setup theme-color -->
 
-        <!-- start theme color meta headers -->
+        <!-- #region theme color meta headers -->
             <meta name="theme-color" content="#151515">
             <meta name="msapplication-navbutton-color" content="#151515">
             <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <!-- end theme color meta headers -->
+        <!-- #endregion -->
 
         <!-- Setup Google Analytics -->
+        <!-- use cloudflare analytics -->
 
         <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
 
