--- a/univasset/scripts/faqs/index.html
+++ b/univasset/scripts/faqs/index.html
@@ -35,6 +35,15 @@
     </section>
 </div>
 
+<template id="query-tags">
+    <span>
+        <label class="tags tooltip">
+            <input type="checkbox" />
+        </label>
+        <span class="tooltiptext"></span>
+    </span>
+</template>
+
 <template id="faq-card">
     <fieldset>
         <legend>
