--- a/EXI/faqs/index.html
+++ b/EXI/faqs/index.html
@@ -3,7 +3,7 @@
     <head>
         <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script type="module" src="./query.js"></script>
-        <script type="module" src="/univasset/scripts/faqs/test.js"></script>
+        <script type="module" src="/univasset/scripts/faqs/index.js"></script>
         <script type="module" src="/univasset/scripts/include/index.js"></script>
 
         <meta charset='utf-8'>
@@ -27,6 +27,6 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/faqs/index.html" subheader="Template testing" onreplace="queryFunc(tags, cards)" ></include>
+        <include src="/univasset/scripts/faqs/index.html" subheader="Waiting tests" onreplace="queryFunc(tags, cards)" ></include>
     </body>
 </html>
