--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -99,6 +99,8 @@
                 <div data-grid="count"></div>
                 <img />
                 <div data-grid="set3"></div>
+                <!-- 3 most used main stats -->
+                <!-- 3 most used substats -->
             </button>
         </template>
 
